package com.alma.climbingtraining.ui.flyingloto

const val TAG_PLAYER_NAME_INPUT = "player_name_input"
const val TAG_ADD_PLAYER_BUTTON = "add_player_button"
const val TAG_VALIDATE_BUTTON = "validate_button"
const val TAG_START_GAME_BUTTON = "start_game_button"
const val TAG_NEXT_NUMBER_BUTTON = "next_number_button"
const val TAG_CURRENT_NUMBER_TEXT = "current_number_text"
const val TAG_CURRENT_PLAYER_NAME_TEXT = "current_player_name_text"
const val TAG_ASSIGNMENT_NAME_PREFIX = "assignment_name_"
const val TAG_ASSIGNMENT_NUMBER_PREFIX = "assignment_number_"
