package com.alma.climbingtraining.ui.randomexercise

const val TAG_RANDOM_EXERCISE_DRAW_BUTTON = "random_exercise_draw_button"
const val TAG_RANDOM_EXERCISE_EXERCISE_NAME = "random_exercise_exercise_name"
const val TAG_RANDOM_EXERCISE_DRAW_AGAIN_BUTTON = "random_exercise_draw_again_button"
const val TAG_RANDOM_EXERCISE_CHANGE_FILTERS_BUTTON = "random_exercise_change_filters_button"
